<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textNombreLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nombre_lugar"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textDescripcionLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_descripcion_lugar"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_distancia"
        android:textSize="16sp"/>
</LinearLayout>
