<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Contenedor de los textos -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNombreLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_lugar"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textDescripcionLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_lugar"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Botón para eliminar lugar -->
        <ImageButton
            android:id="@+id/btnEliminarLugar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_delete"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/eliminar_lugar"/>
        <ImageButton
            android:id="@+id/btnEditarLugar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_edit"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/editar_lugar"
            android:padding="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
